fix: ✨ tokens info alignment

--- a/src/pages/objkt-display/index.module.scss
+++ b/src/pages/objkt-display/index.module.scss
@@ -30,6 +30,7 @@
   font-size: 0.75em;
   display: flex;
   flex-direction: row;
+  align-items: center;
   white-space: pre-wrap;
   color: var(--gray-70);
   margin: 0.5em 0em;
